garage deals, individual comapany difference etc added

--- a/src/components/classifieds-form/accessories-and-parts/accessories-and-parts.html
+++ b/src/components/classifieds-form/accessories-and-parts/accessories-and-parts.html
@@ -143,6 +143,12 @@
       type="file" accept="image/*" placeholder="Select a Display picture" name="displayPicture" id="displayPicture"
       :value="newPost.displayPicture" @value="updatePostData('displayPicture', $event)" />
   </div>
+  <div class="col-12 mb-3">
+    <label> Video Link </label>
+    <!-- prettier-ignore -->
+    <InputText class="inputText" :error="newPostValidation.video" errorText="Enter valid youtube video link"
+    placeholder="Enter youtube video link" id="video" :value="newPost.video" @value="updatePostData('video', $event)" />
+  </div>
   <div
     class="col-12 mt-3 mb-5 d-flex justify-content-between align-items-center button-wrapper"
   >
