--- a/src/components/classifieds-form/motorcycles/motorcycles.html
+++ b/src/components/classifieds-form/motorcycles/motorcycles.html
@@ -127,10 +127,10 @@
     @selectValue="updatePostData('regionalSpec', $event)" id="regionalSpec" />
   </div>
   <div class="col-12 mb-3">
-    <label>Select Price to price Value</label>
+    <label>Price <span>*</span></label>
     <!-- prettier-ignore -->
-    <Select :options="utils.PriceToPriceList()" :error="newPostValidation.priceToPrice" errorText="Select Price To Price Value" default="Select Price To Price Value "
-    @selectValue="updatePostData('priceToPrice', $event)" id="priceToPrice" />
+    <InputText class="inputText" :error="newPostValidation.priceToPrice" errorText="Enter Price" placeholder="Enter Price"
+    id="priceToPrice" :value="newPost.priceToPrice" @value="updatePostData('priceToPrice', $event)" type="number" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -170,6 +170,12 @@
     <!-- prettier-ignore -->
     <Select :options="utils.sellerTypes(loginInfo.userType)" :error="newPostValidation.sellerType" errorText="Select Seller Type"
     default="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" id="sellerType" />
+  </div>
+  <div class="col-12 mb-3">
+    <label> Video Link </label>
+    <!-- prettier-ignore -->
+    <InputText class="inputText" :error="newPostValidation.video" errorText="Enter valid youtube video link"
+    placeholder="Enter youtube video link" id="video" :value="newPost.video" @value="updatePostData('video', $event)" />
   </div>
   <div
     class="col-12 mt-3 mb-5 d-flex justify-content-between align-items-center button-wrapper"
