--- a/src/components/spare-parts-form/truck/truck.html
+++ b/src/components/spare-parts-form/truck/truck.html
@@ -95,10 +95,10 @@
     @selectValue="updatePostData('warranty', $event)" />
   </div>
   <div class="col-12 mb-3">
-    <label>Select Price</label>
+    <label>Price <span>*</span></label>
     <!-- prettier-ignore -->
-    <Select :options="utils.PriceToPriceList()" :error="newPostValidation.price" errorText="Select Price" default="Select Price"
-    @selectValue="updatePostData('price', $event)" />
+    <InputText class="inputText" :error="newPostValidation.price" errorText="Enter Price" placeholder="Enter Price"
+    id="price" :value="newPost.price" @value="updatePostData('price', $event)" type="number" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -112,13 +112,12 @@
   </div>
   <div class="col-12 mb-3">
     <label>
-      Select Kilometers
+      Mileage
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.truckKmList()" :error="newPostValidation.kilometers"
-    errorText="Select Kilometers" default="Select Kilometers"
-    @selectValue="updatePostData('kilometers', $event)" />
+    <InputText class="inputText" :error="newPostValidation.kilometers" errorText="Enter Mileage"
+    placeholder="Enter Mileage" id="kilometers" :value="newPost.kilometers" @value="updatePostData('kilometers', $event)" type="number" />
   </div>
   <div
     class="col-12 mt-3 mb-5 d-flex justify-content-between align-items-center button-wrapper"
