--- a/src/views/rental-details/rental-details.html
+++ b/src/views/rental-details/rental-details.html
@@ -125,18 +125,18 @@
             </p>
             <p>
               <span>Security Deposit</span>
-              <span>AED {{rentalData.deposit}}</span>
+              <span>AED {{rentalData.securityDeposit}}</span>
             </p>
             <p>
               <span>Accepted In</span>
-              <span>{{rentalData.paymentMethods}}</span>
+              <span>{{rentalData.acceptedIn}}</span>
             </p>
           </div>
           <div>
             <h6>Extras</h6>
             <p>
               <span>Additional Driver Insurance</span>
-              <span>AED {{rentalData.addDriverInsurance}}</span>
+              <span>{{rentalData.additionalDriverInsurance}}</span>
             </p>
             <p>
               <span>Salik/Toll Charges</span>
