--- a/src/views/super-dashboard/super-dashboard.html
+++ b/src/views/super-dashboard/super-dashboard.html
@@ -1,74 +1,44 @@
 <div class="container post-details-wrapper my-4">
   <div class="row">
-    <div class="col-md-10 col-12 my-md-5 my-2">
+    <div class="col-md-10 col-12 my-md-5 my-2 p-md-0">
       <h3>Welcome COUAE Super Admin!!</h3>
     </div>
-    <div class="col-md-2 col-12 my-md-5 my-2">
+    <div class="col-md-2 col-12 my-md-5 my-2 p-md-0">
       <!-- prettier-ignore -->
       <Button type="hollow" width="100%" text="Logout" @click="logout" />
     </div>
-    <div class="col-12 mb-md-5 mb-3 mt-3">
-      <ul class="nav nav-tabs w-100">
-        <li class="nav-item">
+    <div class="col-12 mb-3 p-md-0">
+      <label>Select Category <span>*</span></label>
+      <!-- prettier-ignore -->
+      <Select :options="mainCategoryList"
+        default="Select Category" @selectValue="setPageCategory($event)" />
+    </div>
+    <div class="col-12 mb-md-5 mb-3 mt-3 p-md-0">
+      <ul class="nav nav-tabs w-100" v-if="page == 'classifieds'">
+        <li class="nav-item" v-for="item in classifiedsCategoryList">
           <a
             class="nav-link"
-            :class="page=='classifieds' && type=='used-cars' && 'active'"
-            href="#"
-            @click="getNonApprovedPosts('classifieds','used-cars')"
-            >Used Cars</a
+            :class="item.id==type && 'active'"
+            @click="getNonApprovedPosts(item.id)"
+            >{{item.name}}</a
           >
         </li>
-        <li class="nav-item">
+      </ul>
+      <ul class="nav nav-tabs w-100" v-else-if="page == 'spare-parts'">
+        <li class="nav-item" v-for="item in spareCategoryList">
           <a
             class="nav-link"
-            :class="page=='classifieds' && type=='motorcycles' && 'active'"
-            href="#"
-            @click="getNonApprovedPosts('classifieds','motorcycles')"
-            >Motorcycle</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            :class="page=='classifieds' && type=='boats' && 'active'"
-            href="#"
-            @click="getNonApprovedPosts('classifieds','boats')"
-            >Boats</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            :class="page=='classifieds' && type=='trucks' && 'active'"
-            href="#"
-            @click="getNonApprovedPosts('classifieds','trucks')"
-            >Truck</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            :class="page=='classifieds' && type=='number-plates' && 'active'"
-            href="#"
-            @click="getNonApprovedPosts('classifieds','number-plates')"
-            >Number Plate</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            :class="page=='classifieds' && type=='accessories' && 'active'"
-            href="#"
-            @click="getNonApprovedPosts('classifieds','accessories')"
-            >Accessories</a
+            :class="item.id==type && 'active'"
+            @click="getNonApprovedPosts(item.id)"
+            >{{item.title}}</a
           >
         </li>
       </ul>
     </div>
-    <div class="col-12 mb-5 no-post-cont" v-if="!nonApprovedPostList">
+    <div class="col-12 mb-5 p-md-0 no-post-cont" v-if="!nonApprovedPostList">
       <h3 class="">No Posts available to approve/decline</h3>
     </div>
-    <div class="col-12 mb-5" v-else>
+    <div class="col-12 mb-5 p-md-0" v-else>
       <div
         class="border-bottom border-primary pb-4 table table-main"
         v-for="post,index in nonApprovedPostList"
@@ -84,7 +54,10 @@
               />
             </div>
           </div>
-          <div class="d-flex" v-else-if="key[0] == 'gallery'">
+          <div
+            class="d-flex"
+            v-else-if="key[0] == 'gallery' || key[0] == 'galleryImages' || key[0] == 'dealerLogo' || key[0] == 'profilePicture'"
+          >
             <div class="w-50 p-0 d-flex py-1">{{key[0]}}:</div>
             <div class="w-50 p-0 d-flex py-1 flex-wrap">
               <img
@@ -92,6 +65,14 @@
                 :src="getImagePath(item,post.imageFolder)"
                 class="w-25"
               />
+            </div>
+          </div>
+          <div class="d-flex" v-else-if="key[0] == 'features'">
+            <div class="w-50 p-0 d-flex py-1">{{key[0]}}:</div>
+            <div class="w-50 p-0 d-flex py-1 flex-wrap">
+              <div v-for="feature in getFeaturesList(key[1])">
+                <p>{{feature.title}}, &nbsp;</p>
+              </div>
             </div>
           </div>
           <div class="d-flex" v-else>
